<resources>
    <string name="app_name">Firebase Realtime</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">REGISTER</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="register_form">Register Form</string>
    <string name="enter_name">Enter Name\n</string>
    <string name="enter_names">Enter Name</string>
    <string name="enter_PhoneNumber">Enter Phone No.</string>
    <string name="enter_PhoneNumbers">Enter PhoneNumber</string>
    <string name="signup">Do you want to ? Sign up</string>
    <string name="select_image">select Picture</string>
    <string name="image_upload">Image Upload</string>
</resources>