<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".firebasepackage.ImageUploadFragment">
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- TODO: Update blank fragment layout -->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:id="@+id/imageView"
            android:text="@string/hello_blank_fragment" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_image"
            android:id="@+id/btnSelected"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/image_upload"
            android:id="@+id/btnUploaded"/>

    </LinearLayout>
</layout>